aws/vpn/vpn-cloudformation.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "OpenSwan como VPN IPSec",
	"Parameters": {
		"KeyName": {
			"Description": "Chave de Acesso SSH",
			"Type": "AWS::EC2::KeyPair::KeyName",
			"ConstraintDescription": "Precisa existir, não será criada."
		},
		"VPC": {
			"Description": "Escolher a rede VPC padrão.",
			"Type": "AWS::EC2::VPC::Id"
		},
		"Subnet": {
			"Description": "Escolher a subrede padrão.",
			"Type": "AWS::EC2::Subnet::Id"
		},
		"IPSecSharedSecret": {
			"Description": "Chave compartilhada para o IPSec.",
			"Type": "String"
		},
		"VPNUser": {
			"Description": "Usuário VPN.",
			"Type": "String"
		},
		"VPNPassword": {
			"Description": "Senha VPN.",
			"Type": "String"
		}
	},
	"Mappings": {
		"EC2RegionMap": {
			"ap-northeast-1": {"AmazonLinuxAMIHVMEBSBacked64bit": "ami-cbf90ecb"},
			"ap-southeast-1": {"AmazonLinuxAMIHVMEBSBacked64bit": "ami-68d8e93a"},
			"ap-southeast-2": {"AmazonLinuxAMIHVMEBSBacked64bit": "ami-fd9cecc7"},
			"eu-central-1": {"AmazonLinuxAMIHVMEBSBacked64bit": "ami-a8221fb5"},
			"eu-west-1": {"AmazonLinuxAMIHVMEBSBacked64bit": "ami-a10897d6"},
			"sa-east-1": {"AmazonLinuxAMIHVMEBSBacked64bit": "ami-b52890a8"},
			"us-east-1": {"AmazonLinuxAMIHVMEBSBacked64bit": "ami-1ecae776"},
			"us-west-1": {"AmazonLinuxAMIHVMEBSBacked64bit": "ami-d114f295"},
			"us-west-2": {"AmazonLinuxAMIHVMEBSBacked64bit": "ami-e7527ed7"}
		}
	},
	"Resources": {
		"EC2Instance": {
			"Type": "AWS::EC2::Instance",
			"Properties": {
				"InstanceType": "t2.micro",
				"SecurityGroupIds": [{"Ref": "InstanceSecurityGroup"}],
				"KeyName": {"Ref": "KeyName"},
				"ImageId": {"Fn::FindInMap": ["EC2RegionMap", {"Ref": "AWS::Region"}, "AmazonLinuxAMIHVMEBSBacked64bit"]},
				"SubnetId": {"Ref": "Subnet"},
				"UserData": {"Fn::Base64": {"Fn::Join": ["", [
					"#!/bin/bash -ex\n",
					"export IPSEC_PSK=", {"Ref": "IPSecSharedSecret"}, "\n",
					"export VPN_USER=", {"Ref": "VPNUser"}, "\n",
					"export VPN_PASSWORD=", {"Ref": "VPNPassword"}, "\n",
					"export STACK_NAME=", {"Ref": "AWS::StackName"}, "\n",
					"export REGION=", {"Ref": "AWS::Region"}, "\n",
					"curl -s https://raw.githubusercontent.com/AWSinAction/code/master/chapter5/vpn-setup.sh | bash -ex\n"
				]]}}
			}
		},
		"InstanceSecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Habilitar acesso a porta da VPN",
				"VpcId": {"Ref": "VPC"},
				"SecurityGroupIngress": [
					{
						"IpProtocol": "tcp",
						"FromPort": "22",
						"ToPort": "22",
						"CidrIp": "0.0.0.0/0"
					},
					{
						"IpProtocol": "udp",
						"FromPort": "500",
						"ToPort": "500",
						"CidrIp": "0.0.0.0/0"
					},
					{
						"IpProtocol": "udp",
						"FromPort": "1701",
						"ToPort": "1701",
						"CidrIp": "0.0.0.0/0"
					},
					{
						"IpProtocol": "udp",
						"FromPort": "4500",
						"ToPort": "4500",
						"CidrIp": "0.0.0.0/0"
					}
				]
			}
		}
	},
	"Outputs": {
		"ServerIP": {
			"Description": "IP Público da VPN",
			"Value": {"Fn::GetAtt": ["EC2Instance", "PublicIp"]}
		},
		"IPSecSharedSecret": {
			"Description": "A chave secreta do IPSec",
			"Value": {"Ref": "IPSecSharedSecret"}
		},
		"VPNUser": {
			"Description": "O usuário para a conexão VPN",
			"Value": {"Ref": "VPNUser"}
		},
		"VPNPassword": {
			"Description": "A senha para a conexão VPN",
			"Value": {"Ref": "VPNPassword"}
		}
	}
}
